feat: adds full project docker compose